# nvidia-orchestrator

./: .env  .gitignore  API_DOCUMENTATION.md  Dockerfile  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  README_API.md  README_CONTAINER_MANAGER.md  README_CONTAINER_SYSTEM.md  README_FAST_API.md  README_HEALTH_MONITOR.md  app.py  container_manager.py  docker-compose.dev.yml  docker-compose.yml  health_monitor.py  logger.py  mongodb.py  new_api.md  new_container_manager.md  openapi-spec-formatted.json  openapi-spec-updated-formatted.json  openapi-spec-updated.json  openapi-spec.json  postgres_store.py  postman-collection.json  pyproject.toml  requirements.txt  run_integration_tests.py  start.sh  tatus  test_container_image_url_validation.py  test_system.py
docs/: DOCKER_IMAGE.md  PACKAGE_OVERVIEW.md  README_API.md  README_APP.md  README_CONTAINER_SYSTEM.md  README_HEALTH_MONITOR.md  README_SWAGGER.md
scripts/: db-init.sql  start.sh  test_package.py
src/nvidia_orchestrator/: __init__.py  cli.py  main.py  py.typed
src/nvidia_orchestrator/api/: __init__.py  app.py
src/nvidia_orchestrator/core/: __init__.py  container_manager.py
src/nvidia_orchestrator/monitoring/: __init__.py  health_monitor.py
src/nvidia_orchestrator/storage/: __init__.py  postgres_store.py
src/nvidia_orchestrator/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_integration_start_container.py  test_postgres_autostart.py  test_simple.py  test_start_container.py
tests/fixtures/: __init__.py  api_fixtures.py
tests/integration/: __init__.py  test_container_start_endpoints.py  test_system.py
tests/unit/: __init__.py  test_package_structure.py
